crates/solidity/testing/snapshots/bindings_output/using/elementary_arrays/generated/v1/0.8.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[input.sol:5:1]
   │
 5 │ ╭─▶ using {first} for uint[];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ function first(uint[] memory values) returns (uint) {
   │          ──┬──               ───┬──  
   │            ╰───────────────────────── name: 1
   │                                 │    
   │                                 ╰──── name: 2
 2 │     return values[0];
   │            ───┬──  
   │               ╰──── ref: 2
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ function first(uint[] memory values) returns (uint) {
   │ │                  ──────────┬─────────  
   │ │                            ╰─────────── definiens: 2
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
